# Sudoku

./: .gitignore  LICENSE  README.md  front end.txt
.github/workflows/: tests.yml
Diseño/: Diagramas.cpp
Documentación/: ux_ui.cpp
Programa Principal/: main.cpp
Pruebas/: test.cpp
backend/: pyproject.toml  requirements.txt  setup.cfg
backend/src/board/: board.py  exceptions.py
backend/src/main/: main.py
backend/tests/: test_board.py  test_main.py
