[metadata]
name = sudoku
author = a
description = sudoku app
license = MIT
license_file = ./../LICENSE
url = https://github.com/JuanJoZP/sudoku
[options]
packages = main
# install_requires = requests>=2
python_requires = >=3.7
package_dir = =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
main = py.typed

[flake8]
max-line-length = 160
