[metadata]
name = sudoku
author = a
description = sudoku app
license = MIT
license_file = ./../LICENSE
url = https://github.com/JuanJoZP/sudoku

[options]
package_dir=
    =src
packages=find:
# install_requires = requests>=2
python_requires = >=3.7
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
main = py.typed

[flake8]
max-line-length = 160
